data/contextbench_phase1/stripped/generated_memory_text_from_stripped_adp/000198_aa8fb71e-0768-48fd-ad87-36019abfd796.txt
PRIOR EXPERIENCE MEMORY
This is read-only prior trajectory evidence for OpenHands.
Use it as context only; verify all behavior in the current workspace.

SOURCE
------
- trajectory_id: aa8fb71e-0768-48fd-ad87-36019abfd796
- repo: django/django
- instance_id: django__django-15347
- base_commit: 7c4f3965098baad2396e24501e09237425a7bd6f
- model: claude-sonnet-4-5-20250929

PRIOR PROBLEM
-------------
Messages framework incorrectly serializes/deserializes extra_tags when it's an empty string
Description

When a message is serialised and then deserialised with any of the built in storage backends, then extra_tags=="" is converted to extra_tags==None. This is because MessageEncoder checks for the truthyness of extra_tags rather than checking it is not None.
To replicate this bug
>>> from django.conf import settings
>>> settings.configure() # Just to allow the following import
>>> from django.contrib.messages.storage.base import Message
>>> from django.contrib.messages.storage.cookie import MessageEncoder, MessageDecoder
>>> original_message = Message(10, "Here is a message", extra_tags="")
>>> encoded_message = MessageEncoder().encode(original_message)
>>> decoded_message = MessageDecoder().decode(encoded_message)
>>> original_message.extra_tags == ""
True
>>> decoded_message.extra_tags is None
True
Effect of the bug in application behaviour
This error occurred in the wild with a template tag similar to the following:
{% if x not in message.extra_tags %}
When the message was displayed as part of a redirect, it had been serialised and deserialized which meant that extra_tags was None instead of the empty string. This caused an error.
It's important to note that this bug affects all of the standard API (messages.debug, messages.info etc. all have a default value of extra_tags equal to "").

FILES INSPECTED
---------------
- django/contrib/messages/storage/cookie.py [Read: 1]
- django/contrib/messages/storage/base.py [Read: 1]

SEARCH ANCHORS
--------------
- [2] Grep pattern='class MessageEncoder'
- [3] Grep pattern='class MessageEncoder' path='testbed'
- [5] Grep pattern='class MessageDecoder' path='testbed'

TEST / DIAGNOSTIC / OTHER COMMANDS
----------------------------------
- [diagnostic] find ./swebench_9_15/testbed -type f -name "*.py" -path "*/messages/storage/*" 2>/dev/null | head -20
- [test] python test_fix.py
- [other/reproduction] python --version
- [other/reproduction] which python3
- [test] python3 test_fix.py

OBSERVED TEST / RUNTIME FAILURES
--------------------------------
- Traceback (most recent call last):

RELEVANT OBSERVATION EXCERPTS
-----------------------------
- [Grep Result after action #3]
  Found 1 file
  testbed/django/contrib/messages/storage/cookie.py
- [Grep Result after action #5]
  Found 1 file
  testbed/django/contrib/messages/storage/cookie.py
- [Read Result after action #7]
       1→import binascii
       2→import json
       3→
       4→from django.conf import settings
       5→from django.contrib.messages.storage.base import BaseStorage, Message
       6→from django.core import signing
       7→from django.http import SimpleCookie
       8→from django.utils.safestring import SafeData, mark_safe
       9→
      10→
      11→class MessageEncoder(json.JSONEncoder):
      12→    """
      13→    Compactly serialize instances of the ``Message`` class as JSON.
      14→    """
      15→    message_key = '__json_message'
      16→
      17→    def default(self, obj):
      18→        if isinstance(obj, Message):
      19→            # Using 0/1 here instead of False/True to produce more compact json
      20→            is_safedata = 1 if isinstance(obj.message, SafeData) else 0
      21→            message = [self.message_key, is_safedata, obj.level, obj.message]
      22→            if obj.extra_tags:
      23→                message.append(obj.extra_tags)
      24→            return message
      25→        return super().default(obj)
      26→
      27→
      28→class MessageDecoder(json.JSONDecoder):
      29→    """
      30→    Decode JSON that includes serialized ``Message`` instances.
      31→    """
      32
  [... truncated ...]
- [Read Result after action #9]
       1→from django.conf import settings
       2→from django.contrib.messages import constants, utils
       3→
       4→LEVEL_TAGS = utils.get_level_tags()
       5→
       6→
       7→class Message:
       8→    """
       9→    Represent an actual message that can be stored in any of the supported
      10→    storage classes (typically session- or cookie-based) and rendered in a view
      11→    or template.
      12→    """
      13→
      14→    def __init__(self, level, message, extra_tags=None):
      15→        self.level = int(level)
      16→        self.message = message
      17→        self.extra_tags = extra_tags
      18→
      19→    def _prepare(self):
      20→        """
      21→        Prepare the message for serialization by forcing the ``message``
      22→        and ``extra_tags`` to str in case they are lazy translations.
      23→        """
      24→        self.message = str(self.message)
      25→        self.extra_tags = str(self.extra_tags) if self.extra_tags is not None else None
      26→
      27→    def __eq__(self, other):
      28→        if not isinstance(other, Message):
      29→            return NotImplemented
      30→        return self.level == other.level and self.message == other.message

  [... truncated ...]
- [Test Output after action #13]
  Exit code 1
    File "test_fix.py", line 16
      print(f"Original message extra_tags: {original_message.extra_tags!r}")
                                                                          ^
  SyntaxError: invalid syntax
- [Test Output after action #19]
  Testing the bug fix for empty string extra_tags...

  Original message extra_tags: ''
  Original message extra_tags == '': True

  Encoded message: ["__json_message", 0, 10, "Here is a message", ""]

  Decoded message extra_tags: ''
  Decoded message extra_tags == '': True
  Decoded message extra_tags is None: False

  ✓ SUCCESS: extra_tags is correctly preserved as empty string!

  ============================================================
  Additional test cases:
  ============================================================

  1. Test with extra_tags=None:
     Original: None, Decoded: None
     ✓ PASS

  2. Test with extra_tags='important urgent':
     Original: 'important urgent', Decoded: 'important urgent'
     ✓ PASS

  3. Test with extra_tags=' ' (single space):
     Original: ' ', Decoded: ' '
     ✓ PASS

  ============================================================
  All tests passed! The bug is fixed.
  ============================================================
  Error processing line 1 of /opt/anaconda3/lib/python3.8/site-packages/matplotlib-nspkg.pth:

    Traceback (most recent call last):
      File "/opt/anaconda3/lib/python3.8/site.py", line 169, in addpackage
        exec(line)
      File "<string>", line 1, i
  [... truncated ...]

SOURCE EDIT EVIDENCE
--------------------
- django/contrib/messages/storage/cookie.py
  Tool: Edit action #11
  old_text_sha256: 4b854b47e1ccdea16f93e41904c346e1dda2b078d81ac7c988ce008f51487a3d
  new_text_sha256: b6585d771585972dbd960a5de8baed01bf7fad8a9831fcfcb26a74dcc93346df
- swebench_9_15/test_fix.py
  Tool: Write action #12
  new_text_sha256: e5572ae3991a49a53369767185d9a27cf37d57e1f81fb3d26ede2905ee868b6a

PRIOR AGENT FINAL MESSAGE
-------------------------
(none)

INJECTION WARNING
-----------------
This memory is from a prior related issue. Use it as evidence only. Do not copy patches blindly.
